// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/auto-complete/demo/basic.md correctly 1`] = `
Array [
  <div
    class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          role="combobox"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      >
        input here
      </span>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
    style="width:200px"
  >
    <div
      class="ant-select-selector"
    >
      <span
        class="ant-select-selection-search"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-select-selection-search-input"
          role="combobox"
          value=""
        />
      </span>
      <span
        class="ant-select-selection-placeholder"
      >
        control mode
      </span>
    </div>
  </div>,
]
`;

exports[`renders ./components/auto-complete/demo/certain-category.md correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:250px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <span
        class="ant-input-search ant-select-selection-search-input ant-input-affix-wrapper ant-input-affix-wrapper-lg"
      >
        <input
          aria-activedescendant="undefined_list_0"
          aria-autocomplete="list"
          aria-controls="undefined_list"
          aria-haspopup="listbox"
          aria-owns="undefined_list"
          autocomplete="off"
          class="ant-input ant-input-lg"
          placeholder="input here"
          role="combobox"
          type="text"
          value=""
        />
        <span
          class="ant-input-suffix"
        >
          <span
            aria-label="search"
            class="anticon anticon-search ant-input-search-icon"
            role="img"
            tabindex="-1"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/custom.md correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <textarea
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ant-input ant-select-selection-search-input"
        placeholder="input here"
        role="combobox"
        style="height:50px"
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/form-debug.md correctly 1`] = `
<form
  class="ant-form ant-form-horizontal"
  style="margin:0 auto"
>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="单独 AutoComplete"
      >
        单独 AutoComplete
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="undefined_list_0"
                  aria-autocomplete="list"
                  aria-controls="undefined_list"
                  aria-haspopup="listbox"
                  aria-owns="undefined_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  role="combobox"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="单独 TreeSelect"
      >
        单独 TreeSelect
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <input
                  aria-activedescendant="undefined_list_0"
                  aria-autocomplete="list"
                  aria-controls="undefined_list"
                  aria-haspopup="listbox"
                  aria-owns="undefined_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  readonly=""
                  role="combobox"
                  style="opacity:0"
                  unselectable="on"
                  value=""
                />
              </span>
              <span
                class="ant-select-selection-placeholder"
              />
            </div>
            <span
              aria-hidden="true"
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="on"
            >
              <span
                class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
                role="img"
              >
                <img
                  alt=""
                  src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="添加 Input.Group 正常"
      >
        添加 Input.Group 正常
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
              style="width:30%"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    readonly=""
                    role="combobox"
                    style="opacity:0"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <span
                  class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
                  role="img"
                >
                  <img
                    alt=""
                    src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
                  />
                </span>
              </span>
            </div>
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    role="combobox"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="包含 search 图标正常"
      >
        包含 search 图标正常
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
          >
            <div
              class="ant-select-selector"
            >
              <span
                class="ant-select-selection-search"
              >
                <span
                  class="ant-select-selection-search-input ant-input-affix-wrapper"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-input"
                    role="combobox"
                    type="text"
                    value=""
                  />
                  <span
                    class="ant-input-suffix"
                  >
                    <span
                      aria-label="search"
                      class="anticon anticon-search"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="search"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
              </span>
              <span
                class="ant-select-selection-placeholder"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="同时有 Input.Group 和图标发生移位"
      >
        同时有 Input.Group 和图标发生移位
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
              style="width:30%"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    readonly=""
                    role="combobox"
                    style="opacity:0"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <span
                  class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
                  role="img"
                >
                  <img
                    alt=""
                    src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
                  />
                </span>
              </span>
            </div>
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <span
                    class="ant-select-selection-search-input ant-input-affix-wrapper"
                  >
                    <input
                      aria-activedescendant="undefined_list_0"
                      aria-autocomplete="list"
                      aria-controls="undefined_list"
                      aria-haspopup="listbox"
                      aria-owns="undefined_list"
                      autocomplete="off"
                      class="ant-input"
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="同时有 Input.Group 和 Search 组件发生移位"
      >
        同时有 Input.Group 和 Search 组件发生移位
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
              style="width:30%"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    readonly=""
                    role="combobox"
                    style="opacity:0"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <span
                  class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
                  role="img"
                >
                  <img
                    alt=""
                    src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
                  />
                </span>
              </span>
            </div>
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <span
                    class="ant-input-search ant-select-selection-search-input ant-input-affix-wrapper"
                  >
                    <input
                      aria-activedescendant="undefined_list_0"
                      aria-autocomplete="list"
                      aria-controls="undefined_list"
                      aria-haspopup="listbox"
                      aria-owns="undefined_list"
                      autocomplete="off"
                      class="ant-input"
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search ant-input-search-icon"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
    >
      <label
        class=""
        title="Input Group 和 Button 结合"
      >
        Input Group 和 Button 结合
      </label>
    </div>
    <div
      class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-16"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <span
            class="ant-input-group ant-input-group-compact"
          >
            <div
              class="ant-select ant-tree-select ant-select-single ant-select-show-arrow"
              style="width:20%"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="undefined_list_0"
                    aria-autocomplete="list"
                    aria-controls="undefined_list"
                    aria-haspopup="listbox"
                    aria-owns="undefined_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    readonly=""
                    role="combobox"
                    style="opacity:0"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select:none;-webkit-user-select:none"
                unselectable="on"
              >
                <span
                  class="anticon no-pointer-events .icons-form-dropdown ant-select-suffix"
                  role="img"
                >
                  <img
                    alt=""
                    src="data:image/svg+xml;base64,PHN2ZyBmaWxsPSJub25lIiBoZWlnaHQ9IjEyIiB2aWV3Qm94PSIwIDAgMTIgMTIiIHdpZHRoPSIxMiIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBjbGlwLXJ1bGU9ImV2ZW5vZGQiIGQ9Im0uNTc1Njg0IDQuNDI0MjEuODQ4NTI2LS44NDg1MyA0LjU3NTc0IDQuNTc1NzQgNC41NzU3NS00LjU3NTc0Ljg0ODUuODQ4NTMtNS40MjQyNSA1LjQyNDI3eiIgZmlsbD0iIzhkOTM5YyIgZmlsbC1ydWxlPSJldmVub2RkIi8+PC9zdmc+"
                  />
                </span>
              </span>
            </div>
            <div
              class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <span
                    class="ant-input-search ant-select-selection-search-input ant-input-affix-wrapper"
                  >
                    <input
                      aria-activedescendant="undefined_list_0"
                      aria-autocomplete="list"
                      aria-controls="undefined_list"
                      aria-haspopup="listbox"
                      aria-owns="undefined_list"
                      autocomplete="off"
                      class="ant-input"
                      role="combobox"
                      type="text"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="search"
                        class="anticon anticon-search ant-input-search-icon"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="search"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </span>
                <span
                  class="ant-select-selection-placeholder"
                />
              </div>
            </div>
            <button
              class="ant-btn ant-btn-primary"
              type="button"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
              <span>
                Search
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/auto-complete/demo/non-case-sensitive.md correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        role="combobox"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    >
      try to type \`b\`
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/options.md correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-show-search"
  style="width:200px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="undefined_list_0"
        aria-autocomplete="list"
        aria-controls="undefined_list"
        aria-haspopup="listbox"
        aria-owns="undefined_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        role="combobox"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    >
      input here
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/uncertain-category.md correctly 1`] = `
<div
  class="ant-select ant-select-auto-complete ant-select-single ant-select-customize-input ant-select-show-search"
  style="width:300px"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <span
        class="ant-input-search ant-select-selection-search-input ant-input-search-enter-button ant-input-search-large ant-input-group-wrapper ant-input-group-wrapper-lg"
      >
        <span
          class="ant-input-wrapper ant-input-group"
        >
          <input
            aria-activedescendant="undefined_list_0"
            aria-autocomplete="list"
            aria-controls="undefined_list"
            aria-haspopup="listbox"
            aria-owns="undefined_list"
            autocomplete="off"
            class="ant-input ant-input-lg"
            placeholder="input here"
            role="combobox"
            type="text"
            value=""
          />
          <span
            class="ant-input-group-addon"
          >
            <button
              class="ant-btn ant-input-search-button ant-btn-primary ant-btn-lg"
              type="button"
            >
              <span
                aria-label="search"
                class="anticon anticon-search"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="search"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </span>
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
</div>
`;
